--- a/Frontend/ecommerce-app/src/app/signin-view/signin-view.component.html
+++ b/Frontend/ecommerce-app/src/app/signin-view/signin-view.component.html
@@ -1,16 +1,21 @@
 <app-nav-bar-view></app-nav-bar-view>
-<div class="wrapper">
-    <div class="container">
-        <form>
-            <label>Email</label>
-            <input type="email" class="form-control" placeholder="Enter email" #email>
-
-            <label>Password</label>
-            <input type="password" class="form-control" placeholder="Enter password" (keyup.enter)="signInUser(email.value,password.value)" #password>
-
-            <button type="button" class="btn btn-primary" (click)="signInUser(email.value,password.value)">Sign in</button>
-            <p>{{feedback}}</p>
-        </form>
-        <button (click)="goBack()" class="btn btn-secondary" id="back">Go back</button>
+<h3 class="row justify-content-center align-items-center">Sign In</h3>
+<form (click)="feedback = ''" class="user-form">
+    <div class="form-container"
+        style="max-width: 50%; display: flex; flex-direction: column; justify-content: center; background-color: rgb(238, 235, 235); padding: 0px; border-radius: 0px; margin: 0 auto;">
+        <div class="form-group">
+            <h6>Email</h6>
+            <input type="email" class="form-control" placeholder="Enter email" #email style="width: 100%;">
+        </div>
+        <div class="form-group">
+            <h6>Password</h6>
+            <input type="password" class="form-control" placeholder="Enter password"
+                (keyup.enter)="signInUser(email.value, password.value)" #password style="width: 100%;">
+        </div>
+        <div clas="button-container">
+            <button class="btn btn-primary" (click)="signInUser(email.value, password.value)">Sign in</button>
+            <button class="btn btn-secondary" (click)="goBack()" id="back">Go back</button>
+        </div>
     </div>
-</div>
+    <p style="text-align: center;" class="feedback">{{ feedback }}</p>
+</form>
