--- a/Frontend/ecommerce-app/src/app/updata-self-data-view/updata-self-data-view.component.html
+++ b/Frontend/ecommerce-app/src/app/updata-self-data-view/updata-self-data-view.component.html
@@ -1,23 +1,23 @@
 <app-nav-bar-view></app-nav-bar-view>
-
-<form (click)="this.feedback=''">
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label>Name</label>
-            <input type="text" class="form-control" [(ngModel)]="updatingUser.name" name="name" id="name">
+<h3 class="row justify-content-center align-items-center">Update own profile</h3>
+<form (click)="feedback = ''" style="width: 40%; margin: 0 auto; align-items: center;" class="user-form">
+    <div class="form-container" style="display: flex; flex-direction: column; justify-content: center; background-color: rgb(238, 235, 235); padding: 0px; border-radius: 0px;">
+        <div class="form-group col-md-6" style="width: 100%;">
+            <h6>Name</h6>
+            <input type="text" class="form-control" [(ngModel)]="updatingUser.name" name="name" id="name" style="width: 100%;">
         </div>
-        <div class="form-group col-md-6">
-            <label>Password</label>
-            <input type="password" class="form-control" [(ngModel)]="updatingUser.password" name="password"
-                id="password">
+        <div class="form-group col-md-6" style="width: 100%;">
+            <h6>Password</h6>
+            <input type="password" class="form-control" [(ngModel)]="updatingUser.password" name="password" id="password" style="width: 100%;">
         </div>
-        <div class="form-group col-md-6">
-            <label>Address</label>
-            <input type="text" class="form-control" [(ngModel)]="updatingUser.address" name="address" id="address">
+        <div class="form-group col-md-6" style="width: 100%;">
+            <h6>Address</h6>
+            <input type="text" class="form-control" [(ngModel)]="updatingUser.address" name="address" id="address" style="width: 100%;">
+        </div>
+        <div class="button-container">
+            <button class="btn btn-primary" (click)="updateUserData()">Update changes</button>
+            <button class="btn btn-secondary" (click)="goBack()">Go Back</button>
         </div>
     </div>
 </form>
-<p>{{feedback}}</p>
-
-<button class="btn btn-primary" (click)="updateUserData()">Update user</button>
-<button class="btn btn-secondary" (click)="goBack()">Go Back</button>
+<p style="text-align: center;" class="feedback">{{ feedback }}</p>
