--- a/Frontend/ecommerce-app/src/app/product-admin-view/product-admin-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-admin-view/product-admin-view.component.html
@@ -18,6 +18,7 @@
         <th scope="col">Price</th>
         <th scope="col">Colours</th>
         <th scope="col">Stock</th>
+        <th scope="col">Include</th>
         <th scope="col">Modify</th>
    </tr>
     </thead>
@@ -32,6 +33,7 @@
         <td>{{p?.price}}</td>
         <td>{{getColourNames(p?.colours)}}</td>
         <td>{{p.stock}}</td>
+        <td>{{p?.includeForPromotion}}</td>
         <td><button class="btn btn-warning" (click)="updateProduct(p)">Modify</button></td>
       </tr>
     </tbody>
