--- a/Frontend/ecommerce-app/src/app/update-product-view/update-product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/update-product-view/update-product-view.component.html
@@ -53,7 +53,7 @@
     </div>
     <h6>Include for Promotions</h6>
       <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" (change)="toggleInclude()" #promotion id="Promotion" checked>
+        <input class="form-check-input" type="checkbox" role="switch" (change)="toggleInclude()" #promotion id="Promotion" [checked]="dataReceived?.includeForPromotion">
         <label class="form-check-label" for="flexSwitchCheckChecked"></label>
       </div>
     <div class="button-container">
