--- a/Frontend/ecommerce-app/src/app/nav-bar-view/nav-bar-view.component.html
+++ b/Frontend/ecommerce-app/src/app/nav-bar-view/nav-bar-view.component.html
@@ -18,11 +18,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" (click)="openUserAdminMenu()">Users</a></li>
             <li><a class="dropdown-item" routerLink="/admin/products">Products</a></li>
-            <li><a class="dropdown-item" routerLink="/admin/history">History</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" routerLink="/admin/history">Purchases</a></li>
           </ul>
         </li>
       </ul>
