--- a/Frontend/ecommerce-app/src/app/product-admin-view/product-admin-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-admin-view/product-admin-view.component.html
@@ -1,12 +1,13 @@
 <app-nav-bar-view></app-nav-bar-view>
-
+<div class="alert alert-info" role="alert" *ngIf="isLoading() || !!feedback">
+  {{isLoading()? 'Loading...':feedback}}
+</div>
 <h1>Products</h1>
 <h6>Search product by Id</h6>
 <input type="text" class="form-control" id="filteredId" #id>
 <button class="btn btn-success" (click)="getProductById(id)">Search</button>
 <button class="btn btn-secondary"(click)="clearSearch()">Clear</button>
 
-<p *ngIf="this.feedback!=''">{{feedback}}</p>
 <table class="table">
     <thead class="thead-dark">
       <tr>
@@ -18,7 +19,7 @@
         <th scope="col">Price</th>
         <th scope="col">Colours</th>
         <th scope="col">Stock</th>
-        <th scope="col">Include</th>
+        <th scope="col">Promotions apply</th>
         <th scope="col">Modify</th>
    </tr>
     </thead>
@@ -33,7 +34,8 @@
         <td>{{p?.price}}</td>
         <td>{{getColourNames(p?.colours)}}</td>
         <td>{{p.stock}}</td>
-        <td>{{p?.includeForPromotion}}</td>
+        <td *ngIf="p?.includeForPromotion">Yes</td>
+        <td *ngIf="!p?.includeForPromotion">No</td>
         <td><button class="btn btn-warning" (click)="updateProduct(p)">Modify</button></td>
       </tr>
     </tbody>
