further notifications to users and handling no connection exception

--- a/Frontend/ecommerce-app/src/app/signin-view/signin-view.component.html
+++ b/Frontend/ecommerce-app/src/app/signin-view/signin-view.component.html
@@ -1,4 +1,7 @@
 <app-nav-bar-view></app-nav-bar-view>
+<div class="alert alert-info" role="alert" *ngIf="!!this.feedback">
+    {{this.feedback}}
+  </div>
 <h3 class="row justify-content-center align-items-center">Sign In</h3>
 <form (click)="feedback = ''" class="user-form">
     <div class="form-container"
@@ -6,16 +9,17 @@
         <div class="form-group">
             <h6>Email</h6>
             <input type="email" class="form-control" placeholder="Enter email" #email style="width: 100%;">
+
         </div>
         <div class="form-group">
             <h6>Password</h6>
             <input type="password" class="form-control" placeholder="Enter password"
                 (keyup.enter)="signInUser(email.value, password.value)" #password style="width: 100%;">
+
         </div>
         <div clas="button-container">
             <button class="btn btn-primary" (click)="signInUser(email.value, password.value)">Sign in</button>
             <button class="btn btn-secondary" (click)="goBack()" id="back">Go back</button>
         </div>
     </div>
-    <p style="text-align: center;" class="feedback">{{ feedback }}</p>
 </form>
