--- a/Frontend/ecommerce-app/src/app/purchase-history/purchase-history.component.html
+++ b/Frontend/ecommerce-app/src/app/purchase-history/purchase-history.component.html
@@ -1,45 +1,47 @@
 <app-nav-bar-view></app-nav-bar-view>
-<div *ngIf="!hasPurchases()">
-    <h1>There are no purchases</h1>
+<div class="alert alert-info" role="alert" *ngIf="!hasPurchases()">
+  There are no purchases
 </div>
 <div *ngIf="hasPurchases()">
-    <h1>Purchase History</h1>
-    <table class="table">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">Date</th>
-            <th scope="col">Total</th>
-            <th scope="col">Applied promotion</th>
-            <th scope="col">Payment method</th>
-            <th scope="col">Products</th>
-            <th scope="col">Actions</th>
-            </tr>
-        </thead>
-    
-        <tbody>
-          <ng-container *ngFor="let p of purchases; let i = index">
-          <tr>
-            <th scope="row">{{p?.date}}</th>
-            <td>{{p?.total}}</td>
-            <td>{{p?.currentPromotion ? p?.currentPromotion : 'none'}}</td>
-            <td >{{p?.paymentMethod?.categoryName}}</td>
-            <td>{{getProductNames(p?.cart)}}</td>
-            <td>
-              <button class="btn btn-primary" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapseExample' + i" aria-expanded="false" aria-controls="collapseExample">
-                View Details
-              </button>
-            </td>
-          </tr>
-          <tr [attr.id]="'collapseExample' + i" class="collapse">
-            <td colspan="6">
-              <div class="card card-body">
-                <div *ngFor="let pr of p?.cart">
-                  <p>name : {{pr.name}}, brand: {{pr.brand.name}}, category: {{pr.category.name}}, description: {{pr.description}}, price: {{pr.price}}, color: {{colorsToString(pr.colours)}}</p>
-                </div> 
+  <h1>Purchase History</h1>
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Date</th>
+        <th scope="col">Total</th>
+        <th scope="col">Applied promotion</th>
+        <th scope="col">Payment method</th>
+        <th scope="col">Products</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <ng-container *ngFor="let p of purchases; let i = index">
+        <tr>
+          <th scope="row">{{convertCSharpDateTimeToJsDate(p?.date)}}</th>
+          <td>{{p?.total}}</td>
+          <td>{{p?.currentPromotion ? p?.currentPromotion : 'none'}}</td>
+          <td>{{p?.paymentMethod?.categoryName}}</td>
+          <td>{{getProductNames(p?.cart)}}</td>
+          <td>
+            <button class="btn btn-primary" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapseExample' + i"
+              aria-expanded="false" aria-controls="collapseExample">
+              View/Hide Details
+            </button>
+          </td>
+        </tr>
+        <tr [attr.id]="'collapseExample' + i" class="collapse">
+          <td colspan="6">
+            <div class="card card-body">
+              <div *ngFor="let pr of p?.cart">
+                <p>name : {{pr.name}}, brand: {{pr.brand.name}}, category: {{pr.category.name}}, description:
+                  {{pr.description}}, price: {{pr.price}}, color: {{colorsToString(pr.colours)}}</p>
               </div>
-            </td>
-          </tr>
-        </ng-container>
-        </tbody>
-      </table>
+            </div>
+          </td>
+        </tr>
+      </ng-container>
+    </tbody>
+  </table>
 </div>
