--- a/Frontend/ecommerce-app/src/app/purchase-view/purchase-view.component.html
+++ b/Frontend/ecommerce-app/src/app/purchase-view/purchase-view.component.html
@@ -1,15 +1,17 @@
 <app-nav-bar-view></app-nav-bar-view>
-<div *ngIf="!hasCart()">
-    <h1>There are no products</h1>
+<div class="alert alert-success" role="alert" *ngIf="this.feedback=='Successfully purchased'">
+    {{this.feedback}}
 </div>
-<div *ngIf="hasCart()">
+<div class="alert alert-info" role="alert" *ngIf="cartArray.length ==0 || !!this.feedback">
+    {{cartArray.length == 0? 'No products in cart' : this.feedback}}
+</div>
+
+<div class="alert alert-secondary" role="alert" *ngIf="hasCart()">
     <h3>Price:${{total}}</h3>
-    <button class="btn btn-outline-success" type="submit" (click)="purchase()">Purchase</button>
+    <h5 *ngIf="!!promotion">Promotion: {{promotion}}</h5>
+    <button class="btn btn-outline-success" type="submit" (click)="purchase()">Pay</button>
 </div>
 <div (click)="this.feedback=''">
-<div>
-    <h3>{{feedback}}</h3>
-</div>
 <div class="d-flex">
     <div class="d-inline"> 
         <div class="form-check form-switch">
