--- a/Frontend/ecommerce-app/src/app/update-product-view/update-product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/update-product-view/update-product-view.component.html
@@ -18,8 +18,8 @@
     <div class="form-group col-md-6" style="width: 100%;">
       <h6>Price</h6>
       <input type="number" class="form-control" #pric id="price" style="width: 100%;">
+      <label style="color: red;" *ngIf="pric.valueAsNumber <= 0">Must be larger than zero.<br></label>
       <label style="color: red;" *ngIf="!pric.valueAsNumber">Invalid value, if invalid value is used, then the previous price will not change</label>
-
     </div>
     <div class="form-group col-md-6" style="width: 100%;">
       <h6>Description</h6>
@@ -28,6 +28,7 @@
     <div class="form-group col-md-6" style="width: 100%;">
       <h6>Stock</h6>
       <input type="number" class="form-control" #stock id="stock" style="width: 100%;">
+      <label style="color: red;" *ngIf="stock.valueAsNumber < 0">Must be equal or larger than than zero.</label>
     </div>
     <h6>Brands</h6>
     <div class="radio-buttons" style="display: flex; flex-wrap: wrap;">
